Bug 1303054 - use dynamic cache size with SkiaGL on desktop. r=milan

MozReview-Commit-ID: 3Hhsa1SNcXw