modules/libpref/init/all.js
@@ -786,6 +786,8 @@ pref("gfx.content.azure.backends", "skia");
 #endif
 #endif
 
+pref("gfx.canvas.skiagl.dynamic-cache", true);
+
 pref("gfx.text.disable-aa", false);
 
 pref("gfx.work-around-driver-bugs", true);
